# energy-aware-robot-microgrid

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
ros_ws/: README.md
scripts/: copy_figs.ps1
sim/: README.md
src/earp/: __init__.py  cli.py  models.py  planner.py  report.py  sim.py
tests/: test_peak_mission_improves.py  test_profiles.py  test_sim_runs.py
