[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earp"
version = "0.1.0"
description = "Energy-aware mission planning for a mobile robot co-optimized with a PV+battery microgrid."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Your Name"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4.0"]

[project.scripts]
earp = "earp.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
